# qa-agent

./: .env.example  .gitignore  FOLLOWUP.md  README.md  pyproject.toml
configs/domain/: contract.yaml  finance.yaml
docs/: demo_output.md  design.md
evals/: last_run.json  qa.jsonl  run_eval.py
scripts/: demo.sh  setup.sh
src/qa_agent/: cli.py  config.py  schema.py
src/qa_agent/agent/: __init__.py  llm.py  pipeline.py  prompts.py
src/qa_agent/api/: app.py
src/qa_agent/index/: __init__.py  builder.py
src/qa_agent/ingest/: __init__.py  chunker.py  ocr.py  pipeline.py  tables.py
src/qa_agent/retrieval/: __init__.py  hybrid.py
tests/: test_chunker.py  test_query_expand.py  test_tables.py
